# tree-sitter-cfengine

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  Package.swift  README.md  binding.gyp  degenerate.sh  go.mod  grammar.js  hello_world.cf  package-lock.json  package.json  pyproject.toml  release.sh  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-cfengine.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cfengine/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCfengine/: cfengine.h
bindings/swift/TreeSitterCfengineTests/: TreeSitterCfengineTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: argument_list.txt  at_operator_with_brackets.txt  attributes.txt  body.txt  bundle_macros.txt  bundle_parameters.txt  bundles.txt  call_bundle.txt  call_function.txt  calling.txt  class_guard.txt  class_guards.txt  comments.txt  double_values.txt  empty_argument_list.txt  empty_bundle.txt  empty_parameter_list.txt  expansions.txt  expressions.txt  hello_world.txt  identifier_promisee.txt  identifier_stakeholder.txt  indexing.txt  macros.txt  only_macros copy.txt  promise_attributes.txt  promise_block.txt  promise_line.txt  promises.txt  qualified_identifier.txt  quoted_promisee.txt  quoted_stakeholder.txt  slist.txt  stakeholder.txt  trailing_argument_list.txt  traling_comma.txt
tools/: format_cfengine.py
