[package]
name = "tree-sitter-cfengine"
description = "CFEngine grammar for tree-sitter"
version = "1.0.6"
authors = ["Ole Herman Schumacher Elgesem <oleherman93@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cfengine"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/olehermanse/tree-sitter-cfengine"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
